Updates after Mehdi's feedback
Signed-off-by: Rémy Coutable <remy@jilion.com>

--- a/app/views/admin/documents/_module_id_select.html.haml
+++ b/app/views/admin/documents/_module_id_select.html.haml
@@ -1,1 +1,1 @@
-= select_tag "document[module_id]", options_for_select(TeachingModule.modules_for_select(@document.published_at.try(:year) || session[:admin_year]))
+= select_tag "document[module_id]", options_for_select(TeachingModule.modules_for_select(@document.published_at.try(:year) || session[:admin_year]), @document.module_id)
