--- a/app/views/programs/index.html.haml
+++ b/app/views/programs/index.html.haml
@@ -6,9 +6,10 @@
 = content_for :sidebar do
   #sidebar
     - if teacher_signed_in? && current_teacher.years.try(:many?)
-      = form_tag :program, :method => 'get', :id => "change_year" do
-        = select_tag "year", options_for_select(current_teacher.years, session[:year])
-        = submit_tag "Change year"
+      %div{ :style => "float:left;" }= raw "Change year:"
+      = form_tag :program, :method => 'get' do
+        = select_tag "year", options_for_select(current_teacher.years, session[:year]), :id => "change_year"
+    .spacer
 
     %h4
       = "General information"
