--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -7,7 +7,12 @@
         = link_to new_user_application_path, :id => "registration_button" do
           %span= "Apply for the #{Time.now.utc.year} course"
   - unless SiteSettings.applications_open
-    %p= raw "We thank you for your interest.<br /> #{Time.now.utc.year} Registrations are now closed."
+    %p
+      = "We thank you for your interest."
+      %br
+      = "#{Time.now.utc.year} Registrations are now closed."
+      %br
+      = "Next session will be announced in early #{Time.now.utc.year + 1}."
 
   %h4= "Organizing Entities"
   %ul.entities
