--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -5,7 +5,7 @@
 
     %title= "mintt admin#{yield(:title)}"
 
-    = stylesheet_link_tag 'style', 'admin'
+    = stylesheet_link_tag 'application', 'admin'
     = stylesheet_link_tag 'print', :media => "print"
 
     = javascript_include_tag "http#{ request.ssl? ? 's':'' }://use.typekit.com/qwi4bur.js"
