--- a/app/views/admin/teachers/_teachers.html.haml
+++ b/app/views/admin/teachers/_teachers.html.haml
@@ -11,5 +11,5 @@
     %th
   = render teachers
 
--# = will_paginate(:params => { :format => nil }, :renderer => 'WillPaginate::ViewHelpers::LinkRendererRemote')
+-# = will_paginate(:params => { :format => nil })#, :renderer => 'WillPaginate::ViewHelpers::LinkRendererRemote')
 -# = page_entries_info teachers
