--- a/app/views/admin/teaching_modules/_teaching_modules.html.haml
+++ b/app/views/admin/teaching_modules/_teaching_modules.html.haml
@@ -9,5 +9,5 @@
     %th
   = render @teaching_modules
 
-= will_paginate(:params => { :format => nil }, :renderer => 'WillPaginate::ViewHelpers::LinkRendererRemote')
+= will_paginate(:params => { :format => nil })#, :renderer => 'WillPaginate::ViewHelpers::LinkRendererRemote')
 = page_entries_info @teaching_modules
