Tiny update in the schedule

--- a/app/views/programs/_day_1.html.haml
+++ b/app/views/programs/_day_1.html.haml
@@ -16,11 +16,11 @@
       %ul.document_list
         = list_documents_for_module(1)
   %tr
-    %td.time= "10:30"
+    %td.time= "10:00"
     %td.description.module
       %h4= "Break"
   %tr
-    %td.time= "11:00"
+    %td.time= "10:30"
     %td.description.module.end
       %h4= "Speaker"
   %tr
@@ -54,7 +54,7 @@
   %tr
     %td.time= "17:30"
     %td.description
-      %h4= "Case Study"
+      %h4= "Case Studies"
   %tr
     %td.time= "18:00"
     %td.description
