--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -54,7 +54,7 @@
         = "Intellectual Property"
       .desc
         %p= "Intellectual property deals with the legal protection of inventions, software and other intellectual creations. What kind of protection can you get? What advantages does it bring? How much does it cost? What are the best protection strategies? This module will show the benefits and pitfalls of patents, copyright and other intellectual property rights based on real cases."
-        %p= "An invited guest will also bring to the class his/her practical experiences in the field of intellectual property matters."
+        %p= raw "As a guest speaker, Mr George W. Humphrey, senior partner at trademark firm #{link_to 'TRADAMARCA', 'http://tradamarca.com'}, will also bring to the class his practical experiences in the field of intellectual property matters."
 
   = module_box do
     .left
