Rails and gems update + Courses' dates update

--- a/app/views/admin/teachers/_teacher.html.haml
+++ b/app/views/admin/teachers/_teacher.html.haml
@@ -4,6 +4,6 @@
       = link_to image_tag("/images/admin/selected.png", :alt => "selected"), admin_teacher_path(teacher)
   %td= link_to (teacher.name.blank? ? "No name yet" : teacher.name), [:admin, teacher]
   %td= mail_to(teacher.email, nil, :encode => 'hex', :class => "link")
-  %td= teacher.years.try(:join, ", ")
+  %td= teacher_active_years(teacher)
   %td= link_to "edit", [:edit, :admin, teacher]
   %td= button_to("delete", [:admin, teacher], :confirm => "Are you sure?", :method => :delete, :class => "button delete")
