--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -1,4 +1,3 @@
-- current_year = SiteSettings.course_dates.respond_to?("_#{Time.now.utc.year}") ? Time.now.utc.year : Time.now.utc.year - 1
 #sidebar
   - if SiteSettings.applications_open
     - if !user_signed_in? && !teacher_signed_in?
@@ -24,12 +23,12 @@
   %h4= "Course Information"
   %ul
     %li= "Language: English"
-    %li= "When: June 5 & 6 and October 2, 2012"
+    %li= "When: #{pretty_course_dates(current_year)}"
     %li= "Number of credits: 2"
     %li= "Number of students: 18 max. Decided upon a selection balancing several factors including multi-disciplinarity"
     %li= "Form of Exam: Project report and oral presentation"
     %li
-      = "Delay to submit application: End of April 2012"
+      = "Delay to submit application: End of April #{current_year}"
       - if SiteSettings.applications_open && !user_signed_in? && !teacher_signed_in?
         = raw " through #{link_to 'online application', new_user_registration_path}"
     %li= raw "Location: #{link_to "Quartier de l'innovation, Building E", 'http://g.co/maps/gaapx', :onclick => 'window.open(this); return false'}"
