--- a/app/views/admin/users/_user.html.haml
+++ b/app/views/admin/users/_user.html.haml
@@ -6,6 +6,6 @@
   %td= user.school_and_lab
   %td= user.thesis_supervisor
   %td.datetime
-    %span.date= sexy_date(user.confirmed_at)
+    %span.date= sexy_date(user.created_at)
   %td= link_to("edit", edit_admin_user_path(user))
   %td= update_field_form(user, :trashed_at, Time.now.utc, "delete", {}, :confirm => "Are you sure?", :class => "button delete" )
