--- a/app/views/admin/users/_users.html.haml
+++ b/app/views/admin/users/_users.html.haml
@@ -8,7 +8,7 @@
     %th= link_to "Name", admin_users_path(sort_parameters('last_name', params)), :remote => true
     %th= link_to "School and lab", admin_users_path(sort_parameters('school_and_lab', params)), :remote => true
     %th= link_to "Supervisor", admin_users_path(sort_parameters('thesis_supervisor', params)), :remote => true
-    %th= link_to "Application Date", admin_users_path(sort_parameters('confirmed_at', params)), :remote => true
+    %th= link_to "Application Date", admin_users_path(sort_parameters('created_at', params)), :remote => true
     %th
     %th
   = render @users
