Update course program

--- a/app/views/programs/_day_1.html.haml
+++ b/app/views/programs/_day_1.html.haml
@@ -1,61 +1,55 @@
 %table.program
   %tr
-    %td.time= "08:15"
+    %td.time 08:15
     %td.description
-      %h4="Registration"
+      %h4 Registration
   %tr
-    %td.time= "08:30"
+    %td.time 08:30
     %td.description
-      %h4= "Introduction"
+      %h4 Introduction
   %tr
-    %td.time= "09:00"
+    %td.time 09:00
     %td.description.module.start
       %h3
-        %strong= "Module 1"
-        = @modules[1].try(:title)
+        %strong Module 1 & 3
+        = [@modules[1].try(:title).sub(/ and /, ', '), @modules[3].try(:title)].to_sentence
       %ul.document_list
         = list_documents_for_module(1)
-  %tr
-    %td.time= "10:00"
-    %td.description.module
-      %h4= "Break"
-  %tr
-    %td.time= "10:30"
-    %td.description.module.end
-      %h4= "Speaker"
-  %tr
-    %td.time= "12:00"
-    %td.description
-      %h4= "Lunch"
-  %tr
-    %td.time= "13:30"
-    %td.description.module.start
-      %h3
-        %strong= "Module 3"
-        = @modules[3].try(:title)
-      %ul.document_list
         = list_documents_for_module(3)
   %tr
-    %td.time= "14:30"
+    %td.time 10:30
+    %td.description.module
+      %h4 Break
+  %tr
+    %td.time 11:00
     %td.description.module.end
-      %h4= "Speaker"
+      %h4= [@modules[1].try(:title).sub(/ and /, ', '), @modules[3].try(:title)].to_sentence
   %tr
-    %td.time= "15:30"
+    %td.time 12:00
     %td.description
-      %h4= "Break"
+      %h4 Lunch
   %tr
-    %td.time= "16:00"
+    %td.time 13:30
+    %td.description.module.start
+      %h3
+        %strong Module 1 & 3
+        Guest speaker
+  %tr
+    %td.time 14:30
+    %td.description.module.end
+      %h4 Practical work on a patent case
+  %tr
+    %td.time 15:30
+    %td.description
+      %h4 Break
+  %tr
+    %td.time 16:00
     %td.description.module.start.end
       %h3
-        %strong= "Module 2"
+        %strong Module 2
         = @modules[2].try(:title)
-      %ul.document_list
-        = list_documents_for_module(2)
+      %ul.document_list= list_documents_for_module(2)
   %tr
-    %td.time= "17:30"
+    %td.time 17:30
     %td.description
-      %h4= "Case Studies"
-  %tr
-    %td.time= "18:00"
-    %td.description
-      %h4= "Apéro"
+      %h4 Case studies briefing
