--- a/app/views/programs/_day_3.html.haml
+++ b/app/views/programs/_day_3.html.haml
@@ -1,78 +1,76 @@
 %table.program
   %tr
-    %td.time= "08:30"
+    %td.time 08:30
     %td.description.module.start
       %h3
-        %strong= "Group 1"
-        = "Case Study"
+        %strong Group 1
+        Case study
   %tr
-    %td.time= "09:15"
+    %td.time 09:15
     %td.description.module.end
       %h3
-        %strong= "Group 2"
-        = "Case Study"
+        %strong Group 2
+        Case study
   %tr
-    %td.time= "10:00"
+    %td.time 10:00
     %td.description
-      %h4= "Break"
+      %h4 Break
   %tr
-    %td.time= "10:30"
+    %td.time 10:30
     %td.description.module.start
       %h3
-        %strong= "Group 3"
-        = "Case Study"
+        %strong Group 3
+        Case study
   %tr
-    %td.time= "11:15"
+    %td.time 11:15
     %td.description.module
       %h3
-        %strong= "Group 4"
-        = "Case Study"
+        %strong Group 4
+        Case study
   %tr
-    %td.time= "12:00"
+    %td.time 12:00
     %td.description.module.end
       %h3
-        %strong= "Group 5"
-        = "Case Study"
+        %strong Group 5
+        Case study
   %tr
-    %td.time= "12:45"
+    %td.time 12:45
     %td.description
-      %h4= "Lunch"
+      %h4 Lunch
   %tr
-    %td.time= "13:45"
+    %td.time 13:45
     %td.description.module.start
       %h3
-        %strong= "Group 6"
-        = "Case Study"
+        %strong Group 6
+        Case study
   %tr
-    %td.time= "14:30"
+    %td.time 14:30
     %td.description.module.end
       %h3
-        %strong= "Group 7"
-        = "Case Study"
+        %strong Group 7
+        Case study
   %tr
-    %td.time= "15:15"
+    %td.time 15:15
     %td.description
-      %h4= "Break"
+      %h4 Break
   %tr
-    %td.time= "15:45"
+    %td.time 15:45
     %td.description.module.start
       %h3
-        %strong= "Group 8"
-        = "Case Study"
+        %strong Group 8
+        Case study
   %tr
-    %td.time= "16:30"
+    %td.time 16:30
     %td.description.module
       %h3
-        %strong= "Group 9"
-        = "Case Study"
+        %strong Group 9
+        Case study
   %tr
-    %td.time= "17:15"
+    %td.time 17:15
     %td.description.module.end
-      %h3
-        = "Conclusion"
-      %ul.document_list
-        = list_documents_for_module(7)
+      %h3 Conclusion
+      %ul.document_list= list_documents_for_module(7)
   %tr
-    %td.time= "18:00"
+    %td.time 18:00
     %td.description
-      %h4= "End"
+      %h4 End
