--- a/app/views/programs/_program_content.html.haml
+++ b/app/views/programs/_program_content.html.haml
@@ -1,12 +1,12 @@
 %ul#program_menu
   %li.first{ :class => ('active' if params[:day].try(:==, "1") || !params.key?(:day)) }
-    = link_to(l(SiteSettings.course_dates.send("year_#{session[:year]}")[0], :format => :lite), program_path(:day => 1), :remote => true)
+    = link_to(day_label(1), program_path(:day => 1), :remote => true)
 
   %li{ :class => ('active' if params[:day].try(:==, "2")) }
-    = link_to(l(SiteSettings.course_dates.send("year_#{session[:year]}")[1], :format => :lite), program_path(:day => 2), :remote => true)
+    = link_to(day_label(2), program_path(:day => 2), :remote => true)
 
   %li.last{ :class => ('active' if params[:day].try(:==, "3")) }
-    = link_to(l(SiteSettings.course_dates.send("year_#{session[:year]}")[2], :format => :lite), program_path(:day => 3), :remote => true)
+    = link_to(day_label(3), program_path(:day => 3), :remote => true)
 .spacer
 
 = render "programs/day_#{params[:day] && (1..3).include?(params[:day].to_i) ? params[:day] : 1}"
