--- a/app/views/programs/_day_1.html.haml
+++ b/app/views/programs/_day_1.html.haml
@@ -33,7 +33,7 @@
     %td.description.module.start
       %h3
         %strong Module 1 & 3
-        Guest speaker
+      %h4 Guest speaker
   %tr
     %td.time 14:30
     %td.description.module.end
