--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -31,7 +31,7 @@
       = "Delay to submit application: End of April #{current_year}"
       - if SiteSettings.applications_open && !user_signed_in? && !teacher_signed_in?
         = raw " through #{link_to 'online application', new_user_registration_path}"
-    %li= raw "Location: #{link_to "Quartier de l'innovation, Building E", 'http://g.co/maps/gaapx', :onclick => 'window.open(this); return false'}"
+    %li= raw "Location: #{link_to "Quartier de l'innovation, Building D & C", 'http://g.co/maps/gaapx', :onclick => 'window.open(this); return false'}"
 
   %h4= "More info"
   %p= raw "If you have any question, please contact us through the following #{link_to 'form', contact_path}."
