--- a/app/assets/stylesheets/admin.css.scss.erb
+++ b/app/assets/stylesheets/admin.css.scss.erb
@@ -1,7 +1,7 @@
 a#admin_label {
   width:92px;
   height:32px;
-  background:url(/images/admin/admin_label.png) no-repeat;
+  background:url(<%= asset_path 'admin/admin_label.png' %>) no-repeat;
   display:block;
   text-indent:-9999px;
   position:absolute;
@@ -120,14 +120,14 @@ ul#menu li.home {
 #content.admin table td input.delete {
   width:18px;
   height:19px;
-  background:url(/images/admin/trash.png) no-repeat;
+  background:url(<%= asset_path 'admin/trash.png' %>) no-repeat;
   border:none;
   text-indent:-9999px;
 }
 
 #content a.export {
   padding:0 0 0 28px;
-  background:url(/images/admin/export_icon.png) no-repeat;
+  background:url(<%= asset_path 'admin/export_icon.png' %>) no-repeat;
 }
 
 #content .right_links {
@@ -165,12 +165,12 @@ ul#menu li.home {
 
 #content.admin .actions_left input.mark_as_replied {
   padding-left:40px;
-  background:#111 url(/images/admin/replied_icon.png) no-repeat 10px 50%;
+  background:#111 url(<%= asset_path 'admin/replied_icon.png' %>) no-repeat 10px 50%;
 }
 
 #content.admin .actions_left input.move_to_trash {
   padding-left:40px;
-  background:#111 url(/images/admin/trash.png) no-repeat 10px 50%;
+  background:#111 url(<%= asset_path 'admin/trash.png' %>) no-repeat 10px 50%;
 }
 
 #content.admin h3.teachers_not_active {
