Implements content changes of Apr. 1st from Mehdi

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -315,6 +315,16 @@ a#registration_button span {display:none;}
   padding:5px 15px;
   font-size:14px;
   line-height:24px;
+  ul {
+      list-style-type:square;
+      padding-left: 1em;
+      li {
+        margin-top: 0;
+        margin-bottom: 0;
+        padding: 0;
+        width: 450px;
+      }
+  }
 }
 
 form.main {
