--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -11,20 +11,20 @@
       %h4
         = "Gabriel Clerc"
         %em= "Head of EPFL-TTO"
-      = link_to "http://sri.epfl.ch/GClerc_eng", :class => "bio", :onclick => "window.open(this); return false" do
+      = link_to "http://tto.epfl.ch/cms/site/sri/lang/en/GClerc_eng_1", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
 
       = image_tag "/images/photos/natalia_giovannini.jpg", :alt => "Natalia Giovannini"
       %h4
         = "Natalia Giovannini"
         %em= "Technology Transfer Manager, EPFL-TTO"
-      = link_to "http://sri.epfl.ch/NGiovannini_eng", :class => "bio", :onclick => "window.open(this); return false" do
+      = link_to "http://tto.epfl.ch/cms/site/sri/lang/en/NGiovannini_eng_1", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
       = image_tag "/images/photos/francoise_chardonnens.jpg", :alt => "Françoise Chardonnens"
       %h4
         = "Françoise Chardonnens"
         %em= "Senior Legal Counsel, EPFL-TTO"
-      = link_to "http://sri.epfl.ch/FChardonnens_emg", :class => "bio", :onclick => "window.open(this); return false" do
+      = link_to "http://tto.epfl.ch/cms/site/sri/lang/en/FChardonnens_emg_1", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
     .right
       %h3
@@ -63,7 +63,7 @@
       %h4
         = "Françoise Chardonnens"
         %em= "Lawyer, Licensing Officer EPFL-TTO"
-      = link_to "http://sri.epfl.ch/FChardonnens_emg", :class => "bio", :onclick => "window.open(this); return false" do
+      = link_to "http://tto.epfl.ch/cms/site/sri/lang/en/FChardonnens_emg_1", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
     .right
       %h3
@@ -79,7 +79,7 @@
       %h4
         = "André Catana"
         %em= "Licensing Officer EPFL-TTO"
-      = link_to "http://sri.epfl.ch/ACatana_eng", :class => "bio", :onclick => "window.open(this); return false" do
+      = link_to "http://tto.epfl.ch/cms/site/sri/lang/en/ACatana_eng_1", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
     .right
       %h3
@@ -95,7 +95,7 @@
       %h4
         = "Mehdi Aminian"
         %em= "Licensing Officer EPFL-TTO"
-      = link_to "http://sri.epfl.ch/MAminian_eng", :class => "bio", :onclick => "window.open(this); return false" do
+      = link_to "http://tto.epfl.ch/cms/site/sri/lang/en/MAminian_eng_1", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
     .right
       %h3
@@ -111,7 +111,13 @@
       %h4
         = "Andrea Crottini"
         %em= "Licensing Officer EPFL-TTO"
-      = link_to "http://sri.epfl.ch/ACrottini_eng", :class => "bio", :onclick => "window.open(this); return false" do
+      = link_to "http://tto.epfl.ch/cms/site/sri/lang/en/ACrottini_eng_1", :class => "bio", :onclick => "window.open(this); return false" do
+        %span= "Biography"
+      = image_tag "/images/photos/mauro_lattuada.jpg", :alt => "Mauro Lattuada"
+      %h4
+        = "Mauro Lattuada"
+        %em= "Licensing Officer EPFL-TTO"
+      = link_to "http://tto.epfl.ch/cms/site/sri/lang/en/mauro_lattuada_eng_1", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
     .right
       %h3
